store-agents/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-agents-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - 34.57.159.68.nip.io
      secretName: store-agents-tls
  rules:
    - host: 34.57.159.68.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-agents-service
                port:
                  number: 80
